--- a/vignettes/patchclampplotteR.Rmd
+++ b/vignettes/patchclampplotteR.Rmd
@@ -530,9 +530,30 @@ pruned_eEPSC_control_plots$L
 
 > Quick tip! If you need help for a specific function, type `?` followed by the name of the function. For example, if you type `?plot_raw_current_data` into the Console and press Enter, this will open the help page, with information about how to use each argument in the function, and there are examples to get you started (just replace the example code with your data).
 
+
+
+### Step 3: Summarize data
+
+The next step is to group the data by treatment by sex and obtain summary data. `make_summary_EPSC_data()` will generate a list of 3 dataframes. One dataframe (accessible with `$summary_data`) grouped the data into intervals and generated summary statistics (like mean and standard error) for each point. The interval length was already
+specified during the `make_normalized_EPSC_data()` function from earlier.
+
+```{r make-summary-data}
+summary_eEPSC_df <- make_summary_EPSC_data(
+  data = sample_raw_eEPSC_df,
+  current_type = "eEPSC",
+  save_output_as_RDS = "no",
+  baseline_interval = "t0to5",
+  ending_interval = "t20to25"
+)
+```
+
+```{r reactable-summary-data, echo=F}
+reactable(summary_eEPSC_df$summary_data)
+```
+
 #### Observe percent change data
 
-The second dataframe of (accessible with `$percent_change_data`) contains information on the percent change in evoked current amplitude `percent_change` during a specific time interval (`ending_interval`) relative to the baseline (`baseline_interval`). For example, if currents decreased by 50% after the hormone, the value of `percent_change` is 0.5.
+The second dataframe of the summary data (accessible with `$percent_change_data`) contains information on the percent change in evoked current amplitude `percent_change` during a specific time interval (`ending_interval`) relative to the baseline (`baseline_interval`). For example, if currents decreased by 50% after the hormone, the value of `percent_change` is 0.5.
 
 ```{r display-summary-percent-data-head, eval=F}
 head(summary_eEPSC_df$percent_change_data, n = 30)
@@ -568,26 +589,6 @@ This dataset contains the values for mean, standard deviation, standard error, a
 
 ```{r echo=F, eval=T}
 reactable(summary_eEPSC_df$mean_SE)
-```
-
-
-### Step 3: Summarize data
-
-The next step is to group the data by treatment by sex and obtain summary data. `make_summary_EPSC_data()` will generate a list of 2 dataframes. One dataframe (accessible with `$summary_data`) grouped the data into intervals and generated summary statistics (like mean and standard error) for each point. The interval length was already
-specified during the `make_normalized_EPSC_data()` function from earlier.
-
-```{r make-summary-data}
-summary_eEPSC_df <- make_summary_EPSC_data(
-  data = sample_raw_eEPSC_df,
-  current_type = "eEPSC",
-  save_output_as_RDS = "no",
-  baseline_interval = "t0to5",
-  ending_interval = "t20to25"
-)
-```
-
-```{r reactable-summary-data, echo=F}
-reactable(summary_eEPSC_df$summary_data)
 ```
 
 #### Perform T-tests
