--- a/vignettes/patchclampplotteR.Rmd
+++ b/vignettes/patchclampplotteR.Rmd
@@ -41,8 +41,9 @@ knitr::include_graphics("Directory.png")
 
 In RStudio, click on `File` -> `New project` -> `Existing Directory` and choose
 the folder you just created. Click on `Create Project` and R will refresh to a
-blank, new project. You're now ready to create a new R Markdown (.Rmd) file and
-start your analysis!
+blank, new project.
+
+Click on `File` -> `New File` -> `R Markdown`. Save this somewhere (I like to store this in the `Thesis` subfolder). You're now ready to start your analysis!
 
 ## Install and load package
 
@@ -60,6 +61,8 @@ library(patchclampplotteR)
 ```
 
 You may also find the following packages helpful. The `here` package will help R find your files in the correct subfolders in your project folder. `dplyr` will allow you to rearrange, sort, filter, and change your data, and `ggplot2` will allow you to make custom plots with your data.
+
+Place the `library()` code somewhere near the top of your .Rmd file so everything is in one place, and the functions are loaded for future analyses.
 
 ```{r eval=F, echo=T}
 library(here)
@@ -86,7 +89,7 @@ Please see the vignettes in the Articles page to learn about how to analyze data
 
 ### Cell Characteristics
 
-First, I must import a `.csv` file containing information about factors such as
+First, you must create a `.csv` file containing information about factors such as
 the animal's age and sex, the cell ID number, and other details. Please see the
 **Required columns** section below for full explanations of the required columns and
 what you should include. There is also a link to download an empty `.csv` file with the headers required for this dataset:
@@ -138,7 +141,7 @@ cell_characteristics <- import_cell_characteristics_df(import_ext_data("sample_c
 ```
 
 ```{r display-import-cell, eval=F, echo=T}
-cell_characteristics <- import_cell_characteristics_df("sample_cell_characteristics.csv")
+cell_characteristics <- import_cell_characteristics_df("Data/sample_cell_characteristics.csv")
 
 cell_characteristics
 ```
@@ -149,7 +152,7 @@ reactable(cell_characteristics)
 
 ### Raw evoked current data
 
-Next, I will import the raw evoked current data that has been copied over from
+Next, I will double-check the raw evoked current data that has been copied over from
 Clampfit (again, please see the [Evoked Current Analysis vignette](https://christelinda-laureijs.github.io/patchclampplotteR/articles/evoked-current-analysis.html) for details about how to analyze this data in Clampfit. This is a `.csv` file containing four columns: `letter`, `ID`, `P1`
 and `P2`:
 
@@ -167,7 +170,7 @@ consistency across functions. Capitalized letters will be retained for columns
 like `ID`, `X`, `Y`, `P1`, and `P2`.
 
 ```{r display-sample-evoked-data, eval=F, echo=T}
-sample_eEPSC_data <- read.csv("sample_new_eEPSC_data.csv")
+sample_eEPSC_data <- read.csv("Data/sample_new_eEPSC_data.csv")
 
 sample_eEPSC_data
 ```
@@ -199,11 +202,13 @@ knitr::include_graphics("starting-csv-sheet-screenshot.png")
 
 Use the `add_new_cells()` function, and carefully read the warning messages.
 
+> Notice: All of these files are stored in the `Data/`subfolder, which is why the filenames start with "Data/".
+
 ```{r display-add-new-cells, echo=T, eval=F}
 first_time_df <- add_new_cells(
-  new_raw_data_csv = "sample_new_eEPSC_data.csv",
-  cell_characteristics_csv = "sample_cell_characteristics.csv",
-  old_raw_data_csv = "empty_old_raw_data_sheet.csv",
+  new_raw_data_csv = "Data/sample_new_eEPSC_data.csv",
+  cell_characteristics_csv = "Data/sample_cell_characteristics.csv",
+  old_raw_data_csv = "Data/empty_old_raw_data_sheet.csv",
   data_type = "eEPSC",
   write_new_csv = "no",
   new_file_name = "",
@@ -239,10 +244,10 @@ to the existing dataset. This ensures that you don't accidentally paste in the
 same data twice, resulting in duplicated data.
 
 The final message prints a list of the letters that have been added to the
-dataset. In this case, these are "FX", "GR" and "HC". It is a good way to confirm that you've
+dataset. In this case, these are `"FX"`, `"GR"` and `"HC"`. It is a good way to confirm that you've
 added the letters you were planning to add.
 
-You can also ask R to produce a list of all of the unique letters in the dataset. This won't catch duplicates, but it can help you identify if a letter is completely missing from the dataset. See, `FX` is now included!
+You can also ask R to produce a list of all of the unique letters in the dataset. This won't catch duplicates, but it can help you identify if a letter is completely missing from the dataset. See, `"FX"` is now included!
 
 ```{r view-unique-letters}
 unique(first_time_df$letter)
@@ -255,7 +260,29 @@ head(first_time_df, n = 8) %>%
   reactable()
 ```
 
+
+### Save the data
+
+So far, this complete dataset is only stored as an object (`first_time_df`) in R. You should save this as a `.csv` on your computer so you can access it later. Once you have confirmed that your files were merged without any issues, change `write_new_csv = "no"` to `"yes"`, and write a filename in `new_file_name.`
+
+> **Warning!!** You MUST specify a filename in `new_file_name`, and it must end with ".csv".
+
+```{r eval=F, echo=T}
+first_time_df <- add_new_cells(
+  new_raw_data_csv = "Data/sample_new_eEPSC_data.csv",
+  cell_characteristics_csv = "Data/sample_cell_characteristics.csv",
+  old_raw_data_csv = "Data/empty_old_raw_data_sheet.csv",
+  data_type = "eEPSC",
+  write_new_csv = "yes",
+  new_file_name = "Data/Raw-eEPSC-df.csv",
+  decimal_places = 2
+)
+```
+If the process is successful, you will see a confirmation message displaying the name of the saved file.
+
 As you collect more data, change the value of `old_raw_data_csv` from the empty sheet to your existing raw data sheet. This function will automatically append new data onto your existing sheet and save it to a new `.csv` file (defined by `new_file_name`). I am saving it to the `Data/` subfolder.
+
+By making the `new_file_name` equal to `old_raw_data_csv`, this effectively overwrites your data each time, adding your new data as rows to the bottom of your existing datasheet.
 
 ```{r add-new-cells, eval=F, echo=T}
 add_new_cells(
@@ -268,6 +295,10 @@ add_new_cells(
   decimal_places = 2
 )
 ```
+
+You can comment out this code for now, as you don't need to repeatedly run it each time you run your RMardown file. Just un-comment it and run it whenever you have new data.
+
+`add_new_cells()` also has the ability to import spontaneous data, action potential parameter data, and action potential count data. Please see the documentation for `add_new_cells()` for more information!
 
 ## Explore your data
 
@@ -509,9 +540,24 @@ need to make changes to the following arguments:
 * `y_variable`: Change this to "mean_P1".
 * `pruned`: Change this to "yes"
 
-```{r plot-pruned-current-data}
+```{r plot-pruned-current-data, eval=T, echo=F}
 pruned_eEPSC_control_plots <- plot_raw_current_data(
   data = sample_pruned_eEPSC_df$individual_cells,
+  plot_treatment = "Control",
+  plot_category = 2,
+  current_type = "eEPSC",
+  y_variable = "mean_P1",
+  pruned = "yes",
+  hormone_added = "Insulin",
+  hormone_or_HFS_start_time = 5,
+  theme_options = sample_theme_options,
+  treatment_colour_theme = sample_treatment_names_and_colours
+)
+```
+
+```{r display-make-pruned-plots, eval=F, echo=T}
+pruned_eEPSC_control_plots <- plot_raw_current_data(
+  data = pruned_eEPSC_df$individual_cells,
   plot_treatment = "Control",
   plot_category = 2,
   current_type = "eEPSC",
@@ -530,14 +576,12 @@ pruned_eEPSC_control_plots$L
 
 > Quick tip! If you need help for a specific function, type `?` followed by the name of the function. For example, if you type `?plot_raw_current_data` into the Console and press Enter, this will open the help page, with information about how to use each argument in the function, and there are examples to get you started (just replace the example code with your data).
 
-
-
 ### Step 3: Summarize data
 
 The next step is to group the data by treatment by sex and obtain summary data. `make_summary_EPSC_data()` will generate a list of 3 dataframes. One dataframe (accessible with `$summary_data`) grouped the data into intervals and generated summary statistics (like mean and standard error) for each point. The interval length was already
 specified during the `make_normalized_EPSC_data()` function from earlier.
 
-```{r make-summary-data}
+```{r make-summary-data, eval=T, echo=F}
 summary_eEPSC_df <- make_summary_EPSC_data(
   data = sample_raw_eEPSC_df,
   current_type = "eEPSC",
@@ -546,6 +590,18 @@ summary_eEPSC_df <- make_summary_EPSC_data(
   ending_interval = "t20to25"
 )
 ```
+
+```{r display-make-summary-data-frame, eval=F, echo=T}
+summary_eEPSC_df <- make_summary_EPSC_data(
+  data = raw_eEPSC_df,
+  current_type = "eEPSC",
+  save_output_as_RDS = "no",
+  baseline_interval = "t0to5",
+  ending_interval = "t20to25"
+)
+```
+
+
 
 ```{r reactable-summary-data, echo=F}
 reactable(summary_eEPSC_df$summary_data)
