--- a/vignettes/articles/FAQ.Rmd
+++ b/vignettes/articles/FAQ.Rmd
@@ -100,6 +100,43 @@ control_cell_plot
 
 You can now save this plot with `ggsave()`.
 
+## How do I add annotations (e.g. a line indicating hormones/antagonists?)
+
+Let's say you have a recording with HNMPA (an insulin receptor antagonist) applied continuously throughout the recording. You can add any number of annotations using `+ annotation(...)`. Two of the most common annotations will be lines (`annotation(type = "segment")`) and text(`annotation(type = "text")`).
+
+```{r echo=F}
+raw_eEPSC_HNMPA_plots <- plot_raw_current_data(
+  data = sample_raw_eEPSC_df,
+  plot_treatment = "HNMPA",
+  plot_category = 2,
+  current_type = "eEPSC",
+  y_variable = "P1",
+  pruned = "no",
+  hormone_added = "Insulin",
+  hormone_or_HFS_start_time = 5,
+  theme_options = sample_theme_options,
+  treatment_colour_theme = sample_treatment_names_and_colours
+)
+
+HNMPA_recording_FT <- raw_eEPSC_HNMPA_plots$FT
+```
+
+```{r}
+HNMPA_recording_FT
+```
+
+
+```{r echo=F, eval=T}
+HNMPA_recording_FT + ggplot2::annotate(geom = "segment", x = 0, xend = 25, y = 168, yend = 168) + ggplot2::annotate(geom = "text", x = 0, y = 177, label = "HNMPA", hjust = 0)
+```
+
+
+
+```{r eval=F}
+HNMPA_recording_FT + annotate(geom = "segment", x = 0, xend = 25, y = 168, yend = 168) + annotate(geom = "text", x = 0, y = 177, label = "HNMPA", hjust = 0)
+```
+
+
 
 ## How do I change the plot text sizes? 
 
