--- a/vignettes/articles/action-potential-analysis.Rmd
+++ b/vignettes/articles/action-potential-analysis.Rmd
@@ -21,9 +21,9 @@ library(patchclampplotteR)
 ```
 
 This vignette will demonstrate how to analyze action potential
-properties using a raw .abf file. You will identify the first current
+properties in Clampfit using a raw .abf file. You will identify the first current
 injection that resulted in action potentials and then select the first
-action potential within this sweep for further analyses.
+action potential within this sweep for further analyses. The data can then be processed and plotted in R using `patchclampplotteR` functions.
 
 ```{r header-image, fig.alt = "An image of a current clamp steps recording with the first action potential outlined with a box.", fig.cap = "The box outlines the first action potential on the first sweep with action potentials."}
 knitr::include_graphics("figures/AP-first-trace.png")
@@ -163,10 +163,12 @@ knitr::include_graphics("figures/AP-expression-box.png")
 
 7.  Click on `Edit` -\> `Transfer Traces` and set the
     `Region to transfer` as `Cursors 1..2`. In the `Trace Selection`
-    category, choose only `Vm_primary ()` as the signal. Select `t_x`
-    and `t11` for the traces, then click OK.
+    category, choose only `Vm_primary ()` as the signal. Ensure that `start time at zero` is checked. Select `t_x`
+    and `t11` for the traces, then click `OK`.
+    
+> **Quick Tip!** An even faster keyboard shortcut is `Alt+e+t+s`, which will immediately open the correct signal selection box. Only use this if you are sure that the settings are correct.
 
-8.  Click on the Results sheet (`Window` -\> `Results1`). The `Results`
+8.  Click on the Results sheet (`Window` -\> `Results1` or `Alt+w+2`). The `Results`
     page will display three columns: `Time (ms)`,
     `Trace #6 (or #5, #7, etc.)`, and `Trace #11`. `Trace #x` is the
     membrane potential in mV, and `Trace #11` is the derivative of
@@ -236,7 +238,7 @@ knitr::include_graphics("figures/AP-cursors-new.png")
 -   Measurements: `peak_amplitude`, `time of peak`,
     `antipeak amplitude`, `time of antipeak`, `half-width`
 
-Click OK and then `Window` -\> `Results1` to see the Results page.
+Click OK and then `Window` -\> `Results1` (`Alt+w+2`) to see the Results page.
 
 ```{r statistics-box, fig.alt = "A screenshot of the Statistics box of Clampfit showing the correct options to select."}
 knitr::include_graphics("figures/AP-statistics-box.png")
@@ -247,6 +249,8 @@ knitr::include_graphics("figures/AP-statistics-box.png")
     notice that the .csv column names are different than the column
     names in the `Results` sheet. I changed these column names to make
     them easier to use in R code.
+
+> **Warning!** There is a bug in Clampfit 11.3 (but not 11.4 or 10.6) that leads to incorrect time units for parameters such as time_of_antipeak. Ensure that your parameters have consistent units before moving ahead!
 
 15. Your .csv file should now look like this.
 
