--- a/vignettes/patchclampplotteR.Rmd
+++ b/vignettes/patchclampplotteR.Rmd
@@ -936,7 +936,8 @@ We can use variance measures like the coefficient of variation and the variance-
 ```{r make-variance-dataset}
 variance_df <- make_variance_data(
   data = summary_eEPSC_df$summary_data,
-  df_category = 2,
+  include_all_categories = "no",
+  list_of_categories = c(2),
   include_all_treatments = "yes",
   list_of_treatments = NULL,
   baseline_interval = "t0to5",
