Added function to display t tests for two different sexes on plot_summary_current_data()

--- a/vignettes/articles/spontaneous-current-analysis.Rmd
+++ b/vignettes/articles/spontaneous-current-analysis.Rmd
@@ -241,6 +241,8 @@ knitr::include_graphics("figures/Process-events-button.png")
 
 33. Repeat for the number of recordings that you need to analyze.
 
+> Note! If your baseline is longer than 5 minutes, you should ensure that you take the last 5 minutes of this recording. Otherwise, you may be misrepresenting the sections of the recording that belong in the baseline region!
+
 34. You are now ready to import your data into R! Use the `add_new_cells()` function with `data_type = "sEPSC"`. You may find it helpful to read the [Get Started](https://christelinda-laureijs.github.io/patchclampplotteR/articles/patchclampplotteR.html) guide if you are setting up your data for the first time.
 
 
