--- a/vignettes/articles/FAQ.Rmd
+++ b/vignettes/articles/FAQ.Rmd
@@ -22,6 +22,18 @@ library(purrr)
 library(dplyr)
 ```
 
+
+## How do I update the package?
+
+To update the package, you just need to re-install the package using the same code you used to install it the first time:
+
+```{r install-package-demo, warning=FALSE, message=FALSE, eval=FALSE}
+pak::pak("christelinda-laureijs/patchclampplotteR")
+```
+
+A message will appear asking you to type `y` (for "yes") for updating your existing package files. After this, your package should be up to date!
+
+
 # Data FAQ
 
 ## How do I quickly get cell counts per group?
